<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:id="@+id/sergeyb_tablereservation_main_layout"
              android:background="#b0ffc0">
    <!-- Header -->

    <!-- Request text textView -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:id="@+id/sergeyb_tablereservation_special_request_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tablereservation_spec_request_enter"/>
    </LinearLayout>

    <!-- Request edittext -->
    <LinearLayout
        android:id="@+id/sergeyb_tablereservation_special_request_edittext_layout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp" android:layout_weight="1"
        android:layout_marginBottom="10dp" android:background="#888888">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text=""
            android:id="@+id/sergeyb_tablereservation_special_request_edittext"
            android:inputType="textMultiLine"
            android:gravity="top" android:textSize="14dp"
            android:paddingLeft="10dp" android:paddingTop="5dp"
            android:layout_weight="1" android:background="#00000000"
            android:layout_marginLeft="10dp" android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" android:layout_marginRight="10dp"/>
    </LinearLayout>

    <!-- bottom task bar -->
    <LinearLayout android:layout_height="50dp"
                  android:layout_width="fill_parent"
                  android:orientation="horizontal"
                  android:background="#66000000"
                  android:gravity="center_vertical"
                  android:paddingLeft="5dp"
                  android:paddingRight="5dp" android:layout_gravity="bottom">

        <!-- clear button -->
        <LinearLayout android:layout_height="30dp"
                      android:layout_width="wrap_content"
                      android:orientation="horizontal"
                      android:id="@+id/sergeyb_tablereservation_clear_button"
                      android:gravity="center_vertical|center_horizontal" android:paddingLeft="5dp"
                      android:paddingRight="5dp">
            <TextView
                android:id="@+id/sergeyb_tablereservation_clear_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_clear_upper"
                android:textStyle="bold" android:textColor="#FFFFFF"
                android:textSize="14dp"/>
        </LinearLayout>


        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="50dp"
                      android:orientation="horizontal"
                      android:layout_weight="1"
                      android:gravity="right"
                      android:visibility="invisible"
        >

            <TextView android:id="@+id/sergeyb_tablereservation_symbols_counter"
                      android:layout_height="50dp"
                      android:text="0/150"
                      android:layout_width="wrap_content"
                      android:paddingLeft="26dp"
                      android:layout_weight="1"
                      android:textColor="#ffffff"
                      android:gravity="center"/>
        </LinearLayout>


        <LinearLayout android:layout_height="30dp"
                      android:layout_width="wrap_content"
                      android:orientation="horizontal"
                      android:id="@+id/sergeyb_tablereservation_done_button"
                      android:gravity="center_vertical|center_horizontal" android:paddingLeft="5dp"
                      android:paddingRight="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_done_upper"
                android:id="@+id/sergeyb_tablereservation_done_button_text"
                android:textStyle="bold" android:textColor="#FFFFFF"
                android:textSize="14dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>